# speak-to-user-dev

./: .env  .gitignore  AGENTS.md  NOTICE  README.md  ROADMAP.md  pyproject.toml
src/speak_to_user_dev/: coordinator.py  models.py  prompts.py  resources.py  server.py  settings.py  tools.py
tests/: test_coordinator.py  test_mcp_surfaces.py  test_settings.py
