[project]
name = "speak-to-user-dev"
version = "0.1.0"
description = "FastMCP coordinator for local multi-repo speak-to-user development workflows."
readme = "README.md"
authors = [
    { name = "Gale", email = "mail@galewilliams.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.2.0",
    "pydantic-settings>=2.13.1",
]

[project.scripts]
speak-to-user-dev = "speak_to_user_dev.server:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "RUF"]

[tool.mypy]
python_version = "3.13"
strict = true
packages = ["speak_to_user_dev"]
